added header in html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>What to Watch</title>
 </head>
 
 <body>
-
+  <header>
+    <h1>What To Watch</h1>
+    <h2>What genre are you in the mood for?</h2>
+  </header>
+  <main>
+    <form action="genreForm" name="genreForm">
+      
+    </form>
+  </main>
 </body>
 
 </html>
