added html file

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
   <header>
     <h1>What To Watch</h1>
     <h2>What genre are you in the mood for?</h2>
+    <form action="" name="genreForm" id="genreForm">
+      <label for="genre" class="sr-only">Select a genre from the list</label>
+      <select name="genre" id="genre">
+        <option>Choose one</option>
+      </select>
+    </form>
   </header>
   <main>
-    <form action="genreForm" name="genreForm">
-      
-    </form>
+    
   </main>
 </body>
 
