changed the h2 to a p

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>What To Watch</h1>
-    <h2>What genre are you in the mood for?</h2>
+    <p>What genre are you in the mood for?</p>
     <form action="" name="genreForm" id="genreForm">
       <label for="genre" class="sr-only">Select a genre from the list</label>
       <select name="genre" id="genre">
@@ -20,7 +20,6 @@
     </form>
   </header>
   <main>
-    
   </main>
 </body>
 
