--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <header class="mainHeader">
     <h1>What To Watch</h1>
 
+    <div class="buttonsContainer">
+      <button id="topRatedBtn" value="Top Rated" class="headerBtn">Top Rated</button>
+      <button id="popularBtn" value="Popular" class="headerBtn">Popular</button>
+      <button id="upcomingBtn" value="Upcoming" class="headerBtn">Upcoming</button>
+    </div>
+
     <h2>What genre are you in the mood for?</h2>
 
     <p>Choose a genre from the <span class="headerSpan"> <em>dropdown</em></span> below!</p>
