Added the markup for the goTopBtn

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
       <ul id="moviesGrid" class="moviesGrid"></ul>
     </section>
 
+    <button id="goTopBtn" class="goTopBtn">
+      <i class="fas fa-arrow-up goTopIcon"></i>
+    </button>
+
   </main>
 
   <!-- JavaScript files -->
