--- a/index.html
+++ b/index.html
@@ -1,26 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CUSTOM TAB ICON -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assests/tabIcon/videoCamera9.png"
+    />
+    <!-- CSS CUSTOM STYLESHEET -->
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>What to Watch</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>What to Watch</title>
-</head>
+  <body>
+    <header class="mainHeader">
+      <h1>What to Watch</h1>
 
-<body>
-  <header>
-    <h1>What To Watch</h1>
-    <p>What genre are you in the mood for?</p>
-    <form action="" name="genreForm" id="genreForm">
-      <label for="genre" class="sr-only">Select a genre from the list</label>
-      <select name="genre" id="genre">
-        <option>Choose one</option>
-      </select>
-    </form>
-  </header>
-  <main>
-  </main>
-</body>
+      <div class="buttonsContainer">
+        <button id="topRatedBtn" value="Top Rated" class="headerBtn">
+          All Top Rated Movies
+        </button>
+        <button id="popularBtn" value="Popular" class="headerBtn">
+          All Popular Movies
+        </button>
+        <button id="upcomingBtn" value="Upcoming" class="headerBtn">
+          All Upcoming Movies
+        </button>
+      </div>
 
+      <form action="#" method="GET" class="searchForm">
+        <label for="searchInput" class="sr-only">Enter a movie name:</label>
+        <input
+          type="text"
+          id="searchInput"
+          name="searchInput"
+          class="searchInput"
+          placeholder="Enter a movie name..."
+        />
+        <button type="submit" id="searchBtn" class="searchBtn">
+          <i class="fas fa-search"></i>
+        </button>
+      </form>
+
+      <h2>What genre are you in the mood for?</h2>
+
+      <p>
+        Choose a genre from the
+        <span class="headerSpan"> <em>dropdown</em></span> below!
+      </p>
+
+      <form action="" name="genreForm" id="genreForm" class="genreForm">
+        <label for="genreSelect" class="sr-only"
+          >Select a genre from the dropdown:</label
+        >
+        <select name="genreSelect" id="genreSelect" class="genreSelect">
+          <option>Select a genre</option>
+        </select>
+      </form>
+    </header>
+
+    <main id="mainContent" class="mainContent">
+      <section class="wrapper">
+        <ul id="moviesGrid" class="moviesGrid"></ul>
+      </section>
+
+      <button id="goTopBtn" class="goTopBtn">
+        <i class="fas fa-arrow-up goTopIcon"></i>
+      </button>
+    </main>
+    <!-- JavaScript files -->
+    <script
+      src="https://kit.fontawesome.com/6d588fc2f3.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./app/app.js"></script>
+  </body>
 </html>
