added media queries for 480px

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h2>What genre are you in the mood for?</h2>
 
       <p>
-        Choose a genre from the
+        Select a genre from the
         <span class="headerSpan"> <em>dropdown</em></span> below!
       </p>
 
