removed ALL from the button text

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
       <div class="buttonsContainer">
         <button id="topRatedBtn" value="Top Rated" class="headerBtn">
-          All Top Rated Movies
+          Top Rated Movies
         </button>
         <button id="popularBtn" value="Popular" class="headerBtn">
-          All Popular Movies
+          Popular Movies
         </button>
         <button id="upcomingBtn" value="Upcoming" class="headerBtn">
-          All Upcoming Movies
+          Upcoming Movies
         </button>
       </div>
 
