adjusted copy in header to provide more clarity to user

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
           id="searchInput"
           name="searchInput"
           class="searchInput"
-          placeholder="Enter a movie name..."
+          placeholder="Search for any movie title..."
         />
         <button type="submit" id="searchBtn" class="searchBtn">
           <i class="fas fa-search"></i>
         </button>
       </form>
 
-      <h2>What genre are you in the mood for?</h2>
+      <h2>Not sure what to watch? Select a genre to get started</h2>
 
       <p>
         Select a genre from the
