Added the JavaScript to display the genre name on user selection and changed the background-color:hover of the search and the goToTop button

--- a/index.html
+++ b/index.html
@@ -57,13 +57,14 @@
           >Select a genre from the dropdown:</label
         >
         <select name="genreSelect" id="genreSelect" class="genreSelect">
-          <option>Select a genre</option>
+          <option selected>Select a genre</option>
         </select>
       </form>
     </header>
 
     <main id="mainContent" class="mainContent">
       <section class="wrapper">
+        <h2 id="genreTitle" class="genreTitle">Trending</h2>
         <ul id="moviesGrid" class="moviesGrid"></ul>
       </section>
 
