Refactor some sections of the JavaScript to make it more DRY and deleted unnecessary extra code

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
     <section class="wrapper">
       <h2 id="genreTitle" class="genreTitle">Trending</h2>
       <ul id="moviesGrid" class="moviesGrid"></ul>
+
+      <!-- Modal HTML structure -->
+      <div id="myModal" class="modal">
+        <div class="modalContentContainer">
+          <span class="close">&times;</span>
+          <h3 id="modalTitle" class="modalTitle"></h3>
+          <p id="modalOverview" class="modalOverview"></p>
+          <p id="modalRating" class="modalRating"></p>
+        </div>
+      </div>
+      <!-- End Modal HTML Structure  -->
     </section>
 
     <button id="goTopBtn" class="goTopBtn">
