Created a modal for the movieCard,  refactored the JS file and the search bar's error handler. Refactored and cleaned the CSS.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <a href="#mainContent" class="skipLink">Skip to main content</a>
   <header class="mainHeader">
     <h1>What to Watch</h1>
 
@@ -75,7 +76,7 @@
 
   <!-- JavaScript files -->
   <script src="https://kit.fontawesome.com/6d588fc2f3.js" crossorigin="anonymous"></script>
-  <script src="./app/app.js"></script>
+  <script src="./app/script.js"></script>
 </body>
 
 </html>
