--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <!-- JavaScript files -->
   <script src="https://kit.fontawesome.com/6d588fc2f3.js" crossorigin="anonymous"></script>
-  <script src="./app/script.js"></script>
+  <script src="./app/app.js"></script>
 </body>
 
 </html>
