--- a/index.html
+++ b/index.html
@@ -1,97 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- CUSTOM TAB ICON -->
-    <link
-      rel="icon"
-      type="image/png"
-      href="./assests/tabIcon/videoCamera9.png"
-    />
-    <!-- CSS CUSTOM STYLESHEET -->
-    <link rel="stylesheet" href="./styles/styles.css" />
-    <title>What to Watch</title>
-  </head>
 
-  <body>
-    <a href="#mainContent" class="skipLink">Skip to main content</a>
-    <header class="mainHeader">
-      <div class="wrapper">
-        <h1>What to Watch</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- CUSTOM TAB ICON -->
+  <link rel="icon" type="image/png" href="./assests/tabIcon/videoCamera9.png" />
+  <!-- CSS CUSTOM STYLESHEET -->
+  <link rel="stylesheet" href="./styles/styles.css" />
+  <title>What to Watch</title>
+</head>
 
-        <div class="buttonsContainer">
-          <button id="topRatedBtn" value="Top Rated" class="headerBtn">
-            Top Rated
-          </button>
-          <button id="popularBtn" value="Popular" class="headerBtn">
-            Popular
-          </button>
-          <button id="upcomingBtn" value="Upcoming" class="headerBtn">
-            Upcoming
-          </button>
-        </div>
+<body>
+  <a href="#mainContent" class="skipLink">Skip to main content</a>
+  <header class="mainHeader">
+    <div class="wrapper">
+      <h1>What to Watch</h1>
 
-        <form action="#" method="GET" class="searchForm">
-          <label for="searchInput" class="sr-only">Enter a movie name:</label>
-          <input
-            type="text"
-            id="searchInput"
-            name="searchInput"
-            class="searchInput"
-            placeholder="Enter a movie name..."
-          />
-          <button type="submit" id="searchBtn" class="searchBtn">
-            <i class="fas fa-search"></i>
-          </button>
-        </form>
-
-        <h2>What genre are you in the mood for?</h2>
-
-        <p>
-          Choose a genre from the
-          <span class="headerSpan"> <em>dropdown</em></span> below!
-        </p>
-
-        <form action="" name="genreForm" id="genreForm" class="genreForm">
-          <label for="genreSelect" class="sr-only"
-            >Select a genre from the dropdown:</label
-          >
-          <select name="genreSelect" id="genreSelect" class="genreSelect">
-            <option class="defaultOption" disabled>Select a genre</option>
-          </select>
-        </form>
+      <div class="buttonsContainer">
+        <button id="topRatedBtn" value="Top Rated" class="headerBtn">
+          Top Rated
+        </button>
+        <button id="popularBtn" value="Popular" class="headerBtn">
+          Popular
+        </button>
+        <button id="upcomingBtn" value="Upcoming" class="headerBtn">
+          Upcoming
+        </button>
       </div>
-    </header>
 
-    <main id="mainContent" class="mainContent">
-      <section class="wrapper">
-        <h2 id="genreTitle" class="genreTitle">Trending</h2>
-        <ul id="moviesGrid" class="moviesGrid"></ul>
+      <form action="#" method="GET" class="searchForm">
+        <label for="searchInput" class="sr-only">Enter a movie name:</label>
+        <input type="text" id="searchInput" name="searchInput" class="searchInput"
+          placeholder="Enter a movie name..." />
+        <button type="submit" id="searchBtn" class="searchBtn">
+          <i class="fas fa-search"></i>
+        </button>
+      </form>
 
-        <!-- Modal HTML structure -->
-        <div id="myModal" class="modal">
-          <div class="modalContentContainer">
-            <span class="close">&times;</span>
-            <h3 id="modalTitle" class="modalTitle"></h3>
-            <p id="modalOverview" class="modalOverview"></p>
-            <p id="modalRating" class="modalRating"></p>
-          </div>
+      <h2>What genre are you in the mood for?</h2>
+
+      <p>
+        Choose a genre from the
+        <span class="headerSpan"> <em>dropdown</em></span> below!
+      </p>
+
+      <form action="" name="genreForm" id="genreForm" class="genreForm">
+        <label for="genreSelect" class="sr-only">Select a genre from the dropdown:</label>
+        <select name="genreSelect" id="genreSelect" class="genreSelect">
+          <option class="defaultOption" disabled>Select a genre</option>
+        </select>
+      </form>
+    </div>
+  </header>
+
+  <main id="mainContent" class="mainContent">
+    <section class="wrapper">
+      <h2 id="genreTitle" class="genreTitle">Trending</h2>
+      <ul id="moviesGrid" class="moviesGrid"></ul>
+
+      <!-- Modal HTML structure -->
+      <div id="myModal" class="modal">
+        <div class="modalContentContainer">
+          <span class="close">&times;</span>
+          <h3 id="modalTitle" class="modalTitle"></h3>
+          <p id="modalOverview" class="modalOverview"></p>
+          <p id="modalRating" class="modalRating"></p>
         </div>
-        <!-- End Modal HTML Structure  -->
-      </section>
+      </div>
+      <!-- End Modal HTML Structure  -->
+    </section>
 
-      <button id="goTopBtn" class="goTopBtn">
-        <i class="fas fa-arrow-up goTopIcon"></i>
-      </button>
-    </main>
+    <button id="goTopBtn" class="goTopBtn">
+      <i class="fas fa-arrow-up goTopIcon"></i>
+    </button>
+  </main>
 
-    <!-- JavaScript files -->
-    <script
-      src="https://kit.fontawesome.com/6d588fc2f3.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="./app/app.js"></script>
-  </body>
+  <footer>
+    <div class="footerContainer">
+      <p class="footerContent">
+        Made with ❤️ by <span>Julia W</span> &amp; <span>Luis M</span>
+      </p>
+      <p class="copyright">
+        &copy; 2023 All rights reserved.
+      </p>
+    </div>
+  </footer>
+
+
+
+  <!-- JavaScript files -->
+  <script src="https://kit.fontawesome.com/6d588fc2f3.js" crossorigin="anonymous"></script>
+  <script src="./app/app.js"></script>
+</body>
+
 </html>
