Changed the footer padding from px to rem

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </button>
   </main>
 
-  <footer>
+  <footer id="footer">
     <div class="footerContainer">
       <p class="footerContent">
         Made with ❤️ by <span>Julia W</span> &amp; <span>Luis M</span>
