Added the target=_blank  to the footer's link

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="footerContainer">
       <p class="footerContent">
         Made with ❤️ by <span>Julia W</span> &amp; <span>Luis M</span>
-        <a class="juno" href="https://junocollege.com/">at Juno College</a>
+        <a class="juno" href="https://junocollege.com/" target="_blank">at Juno College</a>
       </p>
       <p class="copyright">
         &copy; 2023 All rights reserved.
